force-app/main/default/objects/AccountSync_Settings__c/AccountSync_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls the Account synchronization process between Salesforce organizations. This setting determines whether synchronization is enabled or disabled.</description>
    <label>AccountSync Settings</label>
</CustomObject>