force-app/main/default/objects/AccountSync_Settings__c/fields/Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Path__c</fullName>
    <description>Defines the API endpoint path used for account synchronization requests.</description>
    <label>Endpoint Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>