force-app/main/default/objects/AccountSync_Settings__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether Account synchronization is currently active. If set to true, synchronization between Salesforce organizations is enabled.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>