force-app/main/default/objects/AccountSync_Settings__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Specifies the Named Credential API name used for authentication when making AccountSync API requests.</description>
    <label>Named Credential Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>