force-app/main/default/objects/AccountSync_Settings__c/fields/On_Demand_Mode__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_Mode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether account synchronization is enabled by default or only triggered manually.</description>
    <inlineHelpText>If enabled, accounts will not be synchronized automatically. Sync must be triggered manually or through specific user actions.
Disable this to sync all accounts by default.</inlineHelpText>
    <label>Enable Sync On Demand</label>
    <type>Checkbox</type>
</CustomField>