force-app/main/default/objects/AccountSync_Settings__c/fields/Query_Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>Query_Endpoint_Path__c</fullName>
    <description>Relative path used for SOQL query callout to external organization.</description>
    <label>Query Endpoint Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>