force-app/main/default/objects/AccountSync_Settings__c/fields/Record_Types_to_Sync__c.field-meta.xml
<CustomField>
    <fullName>Record_Types_to_Sync__c</fullName>
    <description>This field defines which Record Types should be included in the synchronization process. It allows specifying multiple record types that the system should consider when executing data synchronization operations.</description>
    <inlineHelpText>Specify the Record Type Developer Names that should be synchronized. Use a semicolon (;) to separate multiple values.

Example: Provider;Patient;Facility</inlineHelpText>
    <label>Record Types to Sync</label>
    <length>255</length>
    <type>Text</type>
</CustomField>